Smart Notifier App last restart time

--- a/Src/SmartNotifierApp.View/App.config
+++ b/Src/SmartNotifierApp.View/App.config
@@ -3,4 +3,24 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+<system.serviceModel>
+        <bindings>
+                <netTcpBinding>
+                        <binding name="NotifierSvcNetTcpEndPoint">
+                                <security>
+                                        <transport sslProtocols="None" />
+                                </security>
+                        </binding>
+                </netTcpBinding>
+        </bindings>
+        <client>
+                <endpoint address="net.tcp://localhost:8321/NotifierSvc" binding="netTcpBinding"
+                        bindingConfiguration="NotifierSvcNetTcpEndPoint" contract="NotifyServiceWCF.IService1"
+                        name="NotifierSvcNetTcpEndPoint">
+                        <identity>
+                                <userPrincipalName value="320057848@code1.emi.philips.com" />
+                        </identity>
+                </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
