Optimize the code

--- a/Src/SmartNotifier.Service/SmartNotifier.Service.csproj
+++ b/Src/SmartNotifier.Service/SmartNotifier.Service.csproj
@@ -52,6 +52,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SmartNotifier.Common\SmartNotifier.Common.csproj">
+      <Project>{25edede9-0150-4857-813c-ccae41ff3ea0}</Project>
+      <Name>SmartNotifier.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
