--- a/Src/SmartNotifierApp.View/App.config
+++ b/Src/SmartNotifierApp.View/App.config
@@ -1,26 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-<system.serviceModel>
-        <bindings>
-                <netTcpBinding>
-                        <binding name="NotifierSvcNetTcpEndPoint">
-                                <security>
-                                        <transport sslProtocols="None" />
-                                </security>
-                        </binding>
-                </netTcpBinding>
-        </bindings>
-        <client>
-                <endpoint address="net.tcp://localhost:8321/NotifierSvc" binding="netTcpBinding"
-                        bindingConfiguration="NotifierSvcNetTcpEndPoint" contract="NotifyServiceWCF.IService1"
-                        name="NotifierSvcNetTcpEndPoint">
-                        <identity>
-                                <userPrincipalName value="320057848@code1.emi.philips.com" />
-                        </identity>
-                </endpoint>
-        </client>
-    </system.serviceModel>
+  <appSettings>
+    <!--Restart validation time in hours-->
+    <add key="ValidateRestartTime" value="0" />
+    <!--Repeate Notification time in hours-->
+    <add key="ValidateRepeateNotificationTime" value="2" />
+    <!--Threshold Space For Notification Alert in GB-->
+    <add key="ThresholdSpaceForNotificationAlert" value="100" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NotifierSvcNetTcpEndPoint">
+          <security>
+            <transport sslProtocols="None" />
+          </security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:8321/NotifierSvc" binding="netTcpBinding"
+              bindingConfiguration="NotifierSvcNetTcpEndPoint" contract="NotifyServiceWCF.IService1"
+              name="NotifierSvcNetTcpEndPoint">
+        <identity>
+          <userPrincipalName value="320057848@code1.emi.philips.com" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
