--- a/Src/SmartNotifierApp.View/SmartNotifier.View.csproj
+++ b/Src/SmartNotifierApp.View/SmartNotifier.View.csproj
@@ -74,10 +74,14 @@
     <Compile Include="ViewModel\Alerts\Notification.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\OverviewViewModel.cs" />
+    <Compile Include="ViewModel\ProcessViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="View\OverView.xaml.cs">
       <DependentUpon>OverView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ProcessView.xaml.cs">
+      <DependentUpon>ProcessView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +145,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\ProcessView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="toast-notifications-icon.ico">
@@ -190,6 +198,11 @@
     <None Include="Connected Services\NotifyServiceWCF\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Files\Process.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
