--- a/Src/SmartNotifierApp.View/App.config
+++ b/Src/SmartNotifierApp.View/App.config
@@ -7,6 +7,8 @@
     <add key="ValidateRepeateNotificationTime" value="2" />
     <!--Threshold Space For Notification Alert in GB-->
     <add key="ThresholdSpaceForNotificationAlert" value="100" />
+    <!--DB Refresh Interval in seconds-->
+    <add key="DBRefreshInterval" value="15"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
