--- a/Src/SmartNotifierApp.View/SmartNotifier.View.csproj
+++ b/Src/SmartNotifierApp.View/SmartNotifier.View.csproj
@@ -126,6 +126,7 @@
     <None Include="Connected Services\NotifyServiceWCF\SmartNotifier.Common.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\DataSources\SmartNotifier.Common.ConsoleInformation.datasource" />
     <None Include="Properties\DataSources\SmartNotifier.Common.ConsoleProcesses.datasource" />
     <None Include="Properties\DataSources\SmartNotifier.Common.DriveInformation.datasource" />
     <None Include="Properties\DataSources\SmartNotifier.Common.SystemInforamtion.datasource" />
