--- a/Src/SmartNotifier.Common/SmartNotifier.Common.csproj
+++ b/Src/SmartNotifier.Common/SmartNotifier.Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonEnum.cs" />
+    <Compile Include="ConsoleEventLogs.cs" />
     <Compile Include="ConsoleInformation.cs" />
     <Compile Include="ConsoleProcesses.cs" />
     <Compile Include="DriveInformation.cs" />
